// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContinueButton /> render() should render the Continue button as loading 1`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
  type="button"
>
  <svg
    class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-gloom-fc79 ui-buttonspinner-spinner-a731"
    data-name="loading-spinner"
    height="22"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="22"
  >
    <circle
      class="ui-loadingspinner-dot-fc79"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="ui-loadingspinner-circle-fc79"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span
    class="ui-button-content-cef1"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 2`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
  type="button"
>
  <svg
    class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-gloom-fc79 ui-buttonspinner-spinner-a731"
    data-name="loading-spinner"
    height="22"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="22"
  >
    <circle
      class="ui-loadingspinner-dot-fc79"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="ui-loadingspinner-circle-fc79"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span
    class="ui-button-content-cef1"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 3`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
  type="button"
>
  <svg
    class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-gloom-fc79 ui-buttonspinner-spinner-a731"
    data-name="loading-spinner"
    height="22"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="22"
  >
    <circle
      class="ui-loadingspinner-dot-fc79"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="ui-loadingspinner-circle-fc79"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span
    class="ui-button-content-cef1"
  >
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 1`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
  type="button"
>
  <span
    class="ui-button-content-cef1"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 2`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
  type="button"
>
  <span
    class="ui-button-content-cef1"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 3`] = `
<button
  aria-disabled="true"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
  type="button"
>
  <span
    class="ui-button-content-cef1"
  >
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 1`] = `
<button
  aria-disabled="false"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
  type="button"
>
  <span
    class="ui-button-content-cef1"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 2`] = `
<button
  aria-disabled="false"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
  type="button"
>
  <span
    class="ui-button-content-cef1"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 3`] = `
<button
  aria-disabled="false"
  class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
  type="button"
>
  <span
    class="ui-button-content-cef1"
  >
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 4`] = `null`;
